    the system and user configuration.
  * Sbuild/Log.pm: New perl module for logging.  It contains the functions
    open_log, close_log, open_pkg_log, close_pkg_log, add_time_entry,
    add_space_entry, send_mail and log_symlink.
  * bin/checkchroot:
    - Quote all variables.
    - Sort ref-chroot file before diffing (Closes: 360058).
  * COPYING: New file (GPL licence text).
  * debian/control: Update uploaders.
  * debian/copyright:
    - Update with new subversion repository locations for upstream and
      Debian.
    - Add Roger Leigh as a copyright holder.
    - Add a reference to /usr/share/common-licenses/GPL.
  * debian/dirs: Add usr/share/perl5/Sbuild.
  * debian/rules: Install Sbuild/Chroot.pm, Sbuild/Conf.pm and
    Sbuild/Log.pm into /usr/share/perl5/Sbuild.

 --

sbuild (0.43) unstable; urgency=low

  * sbuild:
    - verify_dsc_md5sums(): New function to verify the MD5SUM of files in a
      .dsc file.
    - Add $conf::md5sum for security.
    - fetch_source_files():
      + Use verify_dsc_md5sums to check for incomplete downloads, and
        redownload sources if needed; also verify again after download
        (Closes: #270439).
      + Remove redundant braces and reindent.
    - build(), shutdown(): Quote kill command correctly (Closes: #356686).
    - When using schroot, look for a distribution named
      "$distribution-sbuild" in preference to "$distribution".
    - open_log(), open_pkg_log():
      + Use fork() rather than tee to multiplex log output.
      + Don't buffer log output (Closes: #358717).
    - close_log(), close_pkg_log(): Close all dup'd log streams, and don't
      kill the child log processes, which avoids dataloss in the pipeline.
    - log_symlink(): New function to create a symbolic link to the current
      package log.  This replaces the use of /bin/ln, which has races if
      concurrent builds use it.
    - open_log(), close_log():
      + Save a references to the initial STDOUT and STDERR, and restore